FIx draft badge position on mobile devices

--- a/themes/nica/assets/style/pages/_portfolio.scss
+++ b/themes/nica/assets/style/pages/_portfolio.scss
@@ -294,6 +294,15 @@ a.category {
   }
 
  @media only screen and (max-width: $small-devices) {
+
+    &.draft {
+      .content:after {
+        @include draft-badge;
+        top: 1rem;
+        right: 2rem;
+      }
+    }
+
     .portfolio-page-header {
       display: grid;
       grid-template-columns: 1fr;
